--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,83 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>It is working!</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-</head>
-<body style="background-color: gray">
-    
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body style="background-color: gray">
     <div class="text-center text-white">
-        <div class="mt-5"></div>
-        <h1>It is working!</h1>
-        <div class="mt-5"></div>
-        <p>
-            If you see this page you have correctly setup your vercel deployment!
-        </p>
-        <p>
-            If this template helped you, consider starring the repo on Github
-        </p>
-        <iframe src="https://ghbtns.com/github-btn.html?user=KindCoder-no&repo=vercel-html-hosting-template&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
-        <div class="mt-5"></div>
-        <p>Consider donating to help me improve and create other templates/Open source projects</p>
-        <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="KindCoder" data-color="#FFDD00" data-emoji=""  data-font="Comic" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
-        <div class="mt-5"></div>
-        <p>Some of my other Open Source projects:</p>
-        <ul>
-            <a href="https://github.com/KindCoder-no/node-vipps-api">https://github.com/KindCoder-no/node-vipps-api</a><br>
-            <a href="https://github.com/KindCoder-no/FiveM-YoutubeLoadingScreen">https://github.com/KindCoder-no/FiveM-YoutubeLoadingScreen</a><br>
-            <a href="https://github.com/KindCoder-no/infoscreen">https://github.com/KindCoder-no/infoscreen</a>
-        </ul>
+      <div class="mt-5"></div>
+      <h1>It is working!</h1>
+      <div class="mt-5"></div>
+      <p>
+        If you see this page you have correctly setup your vercel deployment!
+      </p>
+      <p>If this template helped you, consider starring the repo on Github</p>
+      <!-- Place this tag where you want the button to render. -->
+      <!-- Place this tag where you want the button to render. -->
+      <!-- Place this tag where you want the button to render. -->
+      <a
+        class="github-button"
+        href="https://github.com/KindCoder-no/vercel-html-hosting-template"
+        data-icon="octicon-star"
+        data-size="large"
+        data-show-count="true"
+        aria-label="Star KindCoder-no/vercel-html-hosting-template on GitHub"
+        >Star</a
+      >
+      <a
+        class="github-button"
+        href="https://github.com/KindCoder-no/vercel-html-hosting-template/generate"
+        data-icon="octicon-repo-template"
+        data-size="large"
+        aria-label="Use this template KindCoder-no/vercel-html-hosting-template on GitHub"
+        >Use this template</a
+      >
+      <!-- Place this tag where you want the button to render. -->
+      <div class="mt-5"></div>
+      <p>
+        Consider donating to help me improve and create other templates/Open
+        source projects
+      </p>
+      <script
+        type="text/javascript"
+        src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js"
+        data-name="bmc-button"
+        data-slug="KindCoder"
+        data-color="#FFDD00"
+        data-emoji=""
+        data-font="Comic"
+        data-text="Buy me a coffee"
+        data-outline-color="#000000"
+        data-font-color="#000000"
+        data-coffee-color="#ffffff"
+      ></script>
+      <div class="mt-5"></div>
+      <p>Some of my other Open Source projects:</p>
+      <ul>
+        <a href="https://github.com/KindCoder-no/node-vipps-api"
+          >https://github.com/KindCoder-no/node-vipps-api</a
+        ><br />
+        <a href="https://github.com/KindCoder-no/FiveM-YoutubeLoadingScreen"
+          >https://github.com/KindCoder-no/FiveM-YoutubeLoadingScreen</a
+        ><br />
+        <a href="https://github.com/KindCoder-no/infoscreen"
+          >https://github.com/KindCoder-no/infoscreen</a
+        >
+      </ul>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-</body>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
